style(components): :lipstick: updated styling to dynamic page  and fixed broken styles

--- a/styles/modules/Coins.module.scss
+++ b/styles/modules/Coins.module.scss
@@ -2,6 +2,11 @@
 @use '../assets';
 
 .nameRankImg {
+  &:hover {
+    filter: brightness(1.3);
+  }
+  cursor: pointer;
+  transition: all 0.2s ease;
   position: sticky;
   inset: 0;
   z-index: 899;
@@ -11,16 +16,21 @@
   align-items: center;
   border: 1px solid assets.$border_color;
   border-left: none;
+
   > :nth-child(4) {
     font-weight: 700;
   }
   border-top: none;
   > :nth-child(3) {
     font-weight: 600;
+    &:hover {
+      color: assets.$main_nav;
+    }
   }
   > :first-child {
     color: assets.$main_nav;
     padding-left: 1rem;
+    margin-right: 1rem;
   }
   > :last-child {
     align-items: center;
