--- a/styles/modules/HistoryChart.module.scss
+++ b/styles/modules/HistoryChart.module.scss
@@ -89,7 +89,6 @@
     > :first-child > :first-child {
       padding-block: 0.5rem;
       padding-inline: 1rem;
-      outline: 1px solid blue;
     }
     .graphcontainer {
       padding: 1rem;
