--- a/styles/modules/MainSubNav.module.scss
+++ b/styles/modules/MainSubNav.module.scss
@@ -7,6 +7,7 @@
     overflow: scroll;
     gap: 0;
   }
+  padding-bottom: 0.1rem;
 }
 .navWrapper {
   @include assets.flexHelper(initial, space-between, 1.5rem);
