--- a/styles/pages/Market.module.scss
+++ b/styles/pages/Market.module.scss
@@ -4,7 +4,6 @@
   flex-direction: column;
   gap: 1rem;
   > div {
-    outline: 1px solid white;
     width: 100%;
   }
 }
